# edi_energy_scraper

./: .gitignore  .pre-commit-config.yaml  README.md  domain-specific-terms.txt  mwe.py  pyproject.toml  requirements.in  requirements.txt  setup.cfg  tox.ini
.github/: dependabot.yml
.github/workflows/: black.yml  codeql-analysis.yml  coverage.yml  packaging_test.yml  python-publish.yml  pythonlint.yml  unittests.yml
dev_requirements/: requirements-coverage.txt  requirements-formatting.in  requirements-formatting.txt  requirements-linting.in  requirements-linting.txt  requirements-test_packaging.in  requirements-test_packaging.txt  requirements-tests.in  requirements-tests.txt  requirements-type_check.in  requirements-type_check.txt
src/edi_energy_scraper/: __init__.py  apidocument.py  documentmetadata.py  epoch.py  py.typed  scraper.py  utilities.py
unittests/: get_documents_response_body.json  test_downloads.py  test_edienergyscraper.py  test_models.py  test_utilities.py
unittests/__snapshots__/: test_models.ambr
unittests/testfiles/: current_20210210.html  dokumente_20210208.html  future_20210210.html  index_20210208.html  past_20210210.html
