# The content of this file is only necessary for python packages
[metadata]
name = edi_energy_scraper
author = Hochfrequenz Unternehmensberatung GmbH
author_email = your@email.address
description = a scraper to mirror edi-energy.de
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/Hochfrequenz/edi_energy_scraper
project_urls =
    Documentation = https://github.com/Hochfrequenz/edi_energy_scraper
    Code = https://github.com/Hochfrequenz/edi_energy_scraper
    Bug tracker = https://github.com/Hochfrequenz/edi_energy_scraper/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
license = mit
platforms = any

[options]
# create a src package in the root directory and create there a folder with the name of your package
# into this folder you put your python files
package_dir =
    = src
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.9
install_requires =
    beautifulsoup4>=4.11.1
    requests>=2.28.0
    PyPdf2>=2.10.3

[options.packages.find]
where = src
exclude =
    unittests

[options.package_data]
* = py.typed
